// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for LoginPage with admin Should call submit event on form 1`] = `
<div
  className="container"
>
  <header>
    <img
      alt="header logo"
      className="header-logo"
      src="test-file-stub"
    />
    <nav>
      <ul
        className="nav"
      >
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/signup"
            onClick={[Function]}
          >
            Signup
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <div
    className="loader"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\">
  <circle transform=\\"translate(8 0)\\" cx=\\"0\\" cy=\\"16\\" r=\\"0\\"> 
    <animate attributeName=\\"r\\" values=\\"0; 4; 0; 0\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0\\"
      keytimes=\\"0;0.2;0.7;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8\\" calcMode=\\"spline\\" />
  </circle>
  <circle transform=\\"translate(16 0)\\" cx=\\"0\\" cy=\\"16\\" r=\\"0\\"> 
    <animate attributeName=\\"r\\" values=\\"0; 4; 0; 0\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.3\\"
      keytimes=\\"0;0.2;0.7;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8\\" calcMode=\\"spline\\" />
  </circle>
  <circle transform=\\"translate(24 0)\\" cx=\\"0\\" cy=\\"16\\" r=\\"0\\"> 
    <animate attributeName=\\"r\\" values=\\"0; 4; 0; 0\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.6\\"
      keytimes=\\"0;0.2;0.7;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8\\" calcMode=\\"spline\\" />
  </circle>
</svg>
",
        }
      }
      style={
        Object {
          "fill": "lightblue",
          "height": "5%",
          "width": "20%",
        }
      }
    />
  </div>
  <main
    className="signup-container-img"
  >
    <section
      className="signup-container login"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="container"
          >
            <div
              className="popup"
            >
              <span
                className="popuptext"
                id="myPopup"
              >
                Ensure the information are correct..
              </span>
            </div>
            <label
              htmlFor="uname"
            >
              <input
                name="uname"
                onChange={[Function]}
                placeholder="enter your username"
                required={true}
                type="text"
              />
            </label>
            <label
              htmlFor="psw"
            >
              <input
                name="psw"
                onChange={[Function]}
                placeholder="enter your password"
                required={true}
                type="password"
              />
            </label>
            <p>
              Welcome back, ready to serve you when you're in
            </p>
            <button
              className="btn signup-btn background-tertiary"
              id="loginButton"
              type="submit"
            >
              Login to FixZit
            </button>
          </div>
        </form>
      </div>
    </section>
  </main>
  <footer
    className="footer background-quarternary"
  >
    <div>
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="app logo"
          className="footer-logo"
          src="test-file-stub"
        />
      </a>
    </div>
    <div>
      <div
        className="footer-details text-secondary"
      >
        <div
          className="footer-info"
        >
          <div>
            FixZit 5555 Address St. #555 City, State 55555
          </div>
          <div>
            01-2245-789
          </div>
          <div
            className="footer-icon"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-facebook-f text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-linkedin text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-twitter text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-instagram text-secondary"
              />
            </a>
          </div>
        </div>
        <div
          className="footer-links"
        >
          <div
            className="footer-links-copyright"
          >
            Copyright © 2018 ALL RIGHTS RESERVED
          </div>
          <div
            className="footer-nav-links-container"
          >
            <ul
              className="footer-nav-links"
            >
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  ABOUT US
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  PRIVACY
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  TERMS OF USE
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Test for LoginPage with admin Should have the onChange event on input field 1`] = `
<div
  className="container"
>
  <header>
    <img
      alt="header logo"
      className="header-logo"
      src="test-file-stub"
    />
    <nav>
      <ul
        className="nav"
      >
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/signup"
            onClick={[Function]}
          >
            Signup
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <div
    className="loader-text"
  >
    <p>
      Please ensure you have internet connection
    </p>
  </div>
  <main
    className="signup-container-img"
  >
    <section
      className="signup-container login"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="container"
          >
            <div
              className="popup"
            >
              <span
                className="popuptext"
                id="myPopup"
              >
                Ensure the information are correct..
              </span>
            </div>
            <label
              htmlFor="uname"
            >
              <input
                name="uname"
                onChange={[Function]}
                placeholder="enter your username"
                required={true}
                type="text"
              />
            </label>
            <label
              htmlFor="psw"
            >
              <input
                name="psw"
                onChange={[Function]}
                placeholder="enter your password"
                required={true}
                type="password"
              />
            </label>
            <p>
              Welcome back, ready to serve you when you're in
            </p>
            <button
              className="btn signup-btn background-tertiary"
              id="loginButton"
              type="submit"
            >
              Login to FixZit
            </button>
          </div>
        </form>
      </div>
    </section>
  </main>
  <footer
    className="footer background-quarternary"
  >
    <div>
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="app logo"
          className="footer-logo"
          src="test-file-stub"
        />
      </a>
    </div>
    <div>
      <div
        className="footer-details text-secondary"
      >
        <div
          className="footer-info"
        >
          <div>
            FixZit 5555 Address St. #555 City, State 55555
          </div>
          <div>
            01-2245-789
          </div>
          <div
            className="footer-icon"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-facebook-f text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-linkedin text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-twitter text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-instagram text-secondary"
              />
            </a>
          </div>
        </div>
        <div
          className="footer-links"
        >
          <div
            className="footer-links-copyright"
          >
            Copyright © 2018 ALL RIGHTS RESERVED
          </div>
          <div
            className="footer-nav-links-container"
          >
            <ul
              className="footer-nav-links"
            >
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  ABOUT US
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  PRIVACY
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  TERMS OF USE
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Test for LoginPage with admin Should have the onChange event on input field 2`] = `
<div
  className="container"
>
  <header>
    <img
      alt="header logo"
      className="header-logo"
      src="test-file-stub"
    />
    <nav>
      <ul
        className="nav"
      >
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/signup"
            onClick={[Function]}
          >
            Signup
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <div
    className="loader-text"
  >
    <p>
      Please ensure you have internet connection
    </p>
  </div>
  <main
    className="signup-container-img"
  >
    <section
      className="signup-container login"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="container"
          >
            <div
              className="popup"
            >
              <span
                className="popuptext"
                id="myPopup"
              >
                Ensure the information are correct..
              </span>
            </div>
            <label
              htmlFor="uname"
            >
              <input
                name="uname"
                onChange={[Function]}
                placeholder="enter your username"
                required={true}
                type="text"
              />
            </label>
            <label
              htmlFor="psw"
            >
              <input
                name="psw"
                onChange={[Function]}
                placeholder="enter your password"
                required={true}
                type="password"
              />
            </label>
            <p>
              Welcome back, ready to serve you when you're in
            </p>
            <button
              className="btn signup-btn background-tertiary"
              id="loginButton"
              type="submit"
            >
              Login to FixZit
            </button>
          </div>
        </form>
      </div>
    </section>
  </main>
  <footer
    className="footer background-quarternary"
  >
    <div>
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="app logo"
          className="footer-logo"
          src="test-file-stub"
        />
      </a>
    </div>
    <div>
      <div
        className="footer-details text-secondary"
      >
        <div
          className="footer-info"
        >
          <div>
            FixZit 5555 Address St. #555 City, State 55555
          </div>
          <div>
            01-2245-789
          </div>
          <div
            className="footer-icon"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-facebook-f text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-linkedin text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-twitter text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-instagram text-secondary"
              />
            </a>
          </div>
        </div>
        <div
          className="footer-links"
        >
          <div
            className="footer-links-copyright"
          >
            Copyright © 2018 ALL RIGHTS RESERVED
          </div>
          <div
            className="footer-nav-links-container"
          >
            <ul
              className="footer-nav-links"
            >
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  ABOUT US
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  PRIVACY
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  TERMS OF USE
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Test for LoginPage with admin Should render component 1`] = `
<div
  className="container"
>
  <header>
    <img
      alt="header logo"
      className="header-logo"
      src="test-file-stub"
    />
    <nav>
      <ul
        className="nav"
      >
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="btn nav-btn nav-link"
            href="/signup"
            onClick={[Function]}
          >
            Signup
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main
    className="signup-container-img"
  >
    <section
      className="signup-container login"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="container"
          >
            <div
              className="popup"
            >
              <span
                className="popuptext"
                id="myPopup"
              >
                Ensure the information are correct..
              </span>
            </div>
            <label
              htmlFor="uname"
            >
              <input
                name="uname"
                onChange={[Function]}
                placeholder="enter your username"
                required={true}
                type="text"
              />
            </label>
            <label
              htmlFor="psw"
            >
              <input
                name="psw"
                onChange={[Function]}
                placeholder="enter your password"
                required={true}
                type="password"
              />
            </label>
            <p>
              Welcome back, ready to serve you when you're in
            </p>
            <button
              className="btn signup-btn background-tertiary"
              id="loginButton"
              type="submit"
            >
              Login to FixZit
            </button>
          </div>
        </form>
      </div>
    </section>
  </main>
  <footer
    className="footer background-quarternary"
  >
    <div>
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="app logo"
          className="footer-logo"
          src="test-file-stub"
        />
      </a>
    </div>
    <div>
      <div
        className="footer-details text-secondary"
      >
        <div
          className="footer-info"
        >
          <div>
            FixZit 5555 Address St. #555 City, State 55555
          </div>
          <div>
            01-2245-789
          </div>
          <div
            className="footer-icon"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-facebook-f text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-linkedin text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-twitter text-secondary"
              />
            </a>
            <a
              href="/"
              onClick={[Function]}
            >
              <i
                className="fa fa-instagram text-secondary"
              />
            </a>
          </div>
        </div>
        <div
          className="footer-links"
        >
          <div
            className="footer-links-copyright"
          >
            Copyright © 2018 ALL RIGHTS RESERVED
          </div>
          <div
            className="footer-nav-links-container"
          >
            <ul
              className="footer-nav-links"
            >
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  ABOUT US
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  PRIVACY
                </a>
              </li>
              <li>
                <a
                  href="/"
                  onClick={[Function]}
                >
                  TERMS OF USE
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
